CUPS Raster output device "cups": Improved support for rendering jobs with high memory demands.

Let Ghostscript determine the memory buffer sizes automatically (as it
does with all the other output devices) if the environment variable
RIP_MAX_CACHE is not set, zero, or does not begin with a number (like
"auto"). If RIP_MAX_CACHE defines a valid value, use the actual value
for BufferSpace and not 1/10 of it. MaxBitmap is the maximum buffer
size to be used when rendering in full page mode, BufferSpace is the
buffer size used in banding mode. Banding mode is used if MaxBitmap is
too small to hold one page. Bug 691499.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11547 a1074d23-0009-0410-80fe-cf8c14f379e6